# olympus

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/development/: backlog.md
inc/: CMakeLists.txt  olympus.hpp  olympus.hpp.in  window.hpp  window_manager.hpp
inc/debug/: appender.hpp  file_appender.hpp  fps.hpp  logger.hpp  stream_appender.hpp
inc/fx/: skybox.hpp
inc/render/: asset.hpp  framebuffer.hpp  graphics_state_manager.hpp  light.hpp  mesh.hpp  render_engine.hpp  renderable.hpp  renderer.hpp  resource_manager.hpp  screen.hpp  shaders.hpp  shaders.hpp.in  shadow_render_engine.hpp  standard_render_engine.hpp  texture.hpp  viewpoint.hpp  world.hpp  world_object.hpp
inc/terrain/: terrain.hpp  water.hpp
inc/ui/: font_atlas.hpp  font_manager.hpp  text.hpp
inc/utils/: mesh_utils.hpp  shortcuts.hpp
inc/window/: screen.hpp  window.hpp  window_manager.hpp
inc/world/: light.hpp  renderable.hpp  viewpoint.hpp  world.hpp  world_object.hpp
samples/: CMakeLists.txt
samples/001-Basic-Window/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  olympus.cpp  window.cpp  window_manager.cpp
test/: CMakeLists.txt  olympus_test.cpp  olympus_test.hpp  test_appender.cpp  test_appender.hpp  window_manager_test.cpp  window_test.cpp
test/common/: cube.cpp  cube.hpp  olympus_environment.cpp  olympus_environment.hpp  square.cpp  square.hpp  test_appender.cpp  test_appender.hpp  test_block.cpp  test_block.hpp
test/common/fixtures/: screen_fixture.hpp  window_fixture.hpp  world_fixture.hpp
test/debug/: file_appender_test.cpp  fps_test.cpp  logger_test.cpp  stream_appender_test.cpp
test/integration/: readme.md
test/integration/fx/: skybox_test.cpp
test/integration/render/: graphics_state_manager_test.cpp  light_test.cpp  mesh_test.cpp  renderer_test.cpp  screen_test.cpp  texture_test.cpp  viewpoint_test.cpp  world_test.cpp
test/integration/ui/: font_atlas_test.cpp  text_test.cpp
test/integration/window/: screen_test.cpp  window_manager_test.cpp  window_test.cpp  world_test.cpp
test/integration/world/: light_test.cpp  viewpoint_test.cpp
test/legacy/render/: framebuffer_test.cpp  mesh_test.cpp  render_engine_test.cpp  render_fixture.hpp  renderable_test.cpp  resource_manager_test.cpp  screen_test.cpp  standard_render_engine_test.cpp  viewpoint_test.cpp  world_test.cpp
test/legacy/window/: window_manager_test.cpp
test/render/: asset_test.cpp  mesh_test.cpp  render_fixture.cpp  render_fixture.hpp  renderer_test.cpp  screen_test.cpp  texture_test.cpp  utils.cpp  utils.hpp  viewpoint_test.cpp  world_object_test.cpp
test/render/shaders/: bad_f.glsl  bad_v.glsl
test/shaders/: bad_link_f.glsl  good_v.glsl
test/unit/: readme.md
test/unit/debug/: file_appender_test.cpp
test/unit/render/: asset_test.cpp  viewpoint_test.cpp  world_object_test.cpp
test/unit/utils/: mesh_utils_test.cpp
test/unit/world/: viewpoint_test.cpp  world_object_test.cpp
test/utils/: shortcuts_test.cpp
test/window/: window_manager_test.cpp  window_test.cpp
utils/: create_files.py  opengl.supp
(+76 files in other folders)
